@@ -1,5 +1,6 @@
 *Version 3.6.0*
-* * Add missing convenience methods for getStats in Numeric and Alphanumeric script context points, third argument cache defaults false
+* Add missing convenience methods for getStats in Numeric and Alphanumeric script context points, third argument cache defaults false
+* Fixing debug logging in serial server input stream
 
 *Version 3.5.4*
 * Bugfix: Convert dataPointTags, installedModules, and fileStores tables in database conversions
